force-app/main/default/objects/qtc_FulfillmentOrderProduct__c/qtc_FulfillmentOrderProduct__c.object-meta.xml
<CustomObject>
    <label>Fulfillment Order Product</label>
    <nameField>
        <displayFormat>FOP-{00000000}</displayFormat>
        <label>Fulfillment Order Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fulfillment Order Products</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>