force-app/main/default/objects/qtc_FulfillmentOrderProduct__c/fields/qtc_Carrier__c.field-meta.xml
<CustomField>
    <fullName>qtc_Carrier__c</fullName>
    <description>ERP Carrier Name</description>
    <label>Carrier</label>
    <type>TextArea</type>
</CustomField>