force-app/main/default/objects/qtc_FulfillmentOrderProduct__c/fields/qtc_Completion_Date_Shipment_Date__c.field-meta.xml
<CustomField>
    <fullName>qtc_Completion_Date_Shipment_Date__c</fullName>
    <description>Critical, Needed to start the Subscription; Actual Ship Date</description>
    <label>Completion Date/Shipment Date</label>
    <type>Date</type>
</CustomField>