force-app/main/default/objects/qtc_FulfillmentOrderProduct__c/fields/qtc_Delivery_ID__c.field-meta.xml
<CustomField>
    <fullName>qtc_Delivery_ID__c</fullName>
    <description>Needed for support</description>
    <label>Delivery ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>