force-app/main/default/objects/qtc_FulfillmentOrderProduct__c/fields/qtc_Description__c.field-meta.xml
<CustomField>
    <fullName>qtc_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>