force-app/main/default/objects/qtc_FulfillmentOrderProduct__c/fields/qtc_Effective_Quantity__c.field-meta.xml
<CustomField>
    <fullName>qtc_Effective_Quantity__c</fullName>
    <label>Effective Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>