force-app/main/default/objects/qtc_FulfillmentOrderProduct__c/fields/qtc_Exclude_from_ERP__c.field-meta.xml
<CustomField>
    <fullName>qtc_Exclude_from_ERP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to exclude products from being sent to ERP.
This will be twinned from the related Product with the FulfillmentOrderService apex class.</description>
    <inlineHelpText>Used to exclude products from being sent to ERP.</inlineHelpText>
    <label>Exclude from ERP</label>
    <type>Checkbox</type>
</CustomField>