force-app/main/default/objects/qtc_FulfillmentOrderProduct__c/fields/qtc_FulfillmentOrder__c.field-meta.xml
<CustomField>
    <fullName>qtc_FulfillmentOrder__c</fullName>
    <label>Fulfillment Order</label>
    <referenceTo>qtc_FulfillmentOrder__c</referenceTo>
    <relationshipLabel>Fulfillment Order Products</relationshipLabel>
    <relationshipName>Fulfillment_Order_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>