force-app/main/default/objects/qtc_FulfillmentOrderProduct__c/fields/qtc_Hardware_Role__c.field-meta.xml
<CustomField>
    <fullName>qtc_Hardware_Role__c</fullName>
    <description>GSDB HW PID role ID.</description>
    <label>Hardware Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>