force-app/main/default/objects/qtc_FulfillmentOrderProduct__c/fields/qtc_LineNumber__c.field-meta.xml
<CustomField>
    <fullName>qtc_LineNumber__c</fullName>
    <description>User facing line number</description>
    <label>Line Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>