force-app/main/default/objects/qtc_FulfillmentOrderProduct__c/fields/qtc_MDM_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>qtc_MDM_Product_ID__c</fullName>
    <description>MDM Product ID</description>
    <label>MDM Product ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>