force-app/main/default/objects/qtc_FulfillmentOrderProduct__c/fields/qtc_Overall_Quantity__c.field-meta.xml
<CustomField>
    <fullName>qtc_Overall_Quantity__c</fullName>
    <label>Overall Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>