force-app/main/default/objects/qtc_FulfillmentOrderProduct__c/fields/qtc_Package_ID__c.field-meta.xml
<CustomField>
    <fullName>qtc_Package_ID__c</fullName>
    <label>Package ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>