force-app/main/default/objects/qtc_FulfillmentOrderProduct__c/fields/qtc_Product__c.field-meta.xml
<CustomField>
    <fullName>qtc_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Fulfillment Order Products</relationshipLabel>
    <relationshipName>Fulfillment_Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>