force-app/main/default/objects/qtc_FulfillmentOrderProduct__c/fields/qtc_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>qtc_Product_Category__c</fullName>
    <label>Product Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>