force-app/main/default/objects/qtc_FulfillmentOrderProduct__c/fields/qtc_product_family__c.field-meta.xml
<CustomField>
    <fullName>qtc_product_family__c</fullName>
    <description>This field will contains Pmdm Product Family from Product2 object.</description>
    <label>Product Family</label>
    <length>100</length>
    <type>Text</type>
</CustomField>