force-app/main/default/objects/qtc_FulfillmentOrderProduct__c/fields/qtc_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>qtc_Product_Type__c</fullName>
    <label>Product Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>