force-app/main/default/objects/qtc_FulfillmentOrderProduct__c/fields/qtc_ProductOption__c.field-meta.xml
<CustomField>
    <fullName>qtc_ProductOption__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Option</label>
    <referenceTo>SBQQ__ProductOption__c</referenceTo>
    <relationshipLabel>Fulfillment Order Products</relationshipLabel>
    <relationshipName>Fulfillment_Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>