force-app/main/default/objects/qtc_FulfillmentOrderProduct__c/fields/qtc_Promise_Date__c.field-meta.xml
<CustomField>
    <fullName>qtc_Promise_Date__c</fullName>
    <label>Promise Date</label>
    <type>Date</type>
</CustomField>