force-app/main/default/objects/qtc_FulfillmentOrderProduct__c/fields/qtc_Qty_to_Ship__c.field-meta.xml
<CustomField>
    <fullName>qtc_Qty_to_Ship__c</fullName>
    <description>Qty of SW that will be shipped.</description>
    <label>Qty to Ship</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>