force-app/main/default/objects/qtc_FulfillmentOrderProduct__c/fields/qtc_Quantity__c.field-meta.xml
<CustomField>
    <fullName>qtc_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>