force-app/main/default/objects/qtc_FulfillmentOrderProduct__c/fields/qtc_Scheduled_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>qtc_Scheduled_Ship_Date__c</fullName>
    <description>This date is used to show when NCR plans to ship the goods.</description>
    <label>Scheduled Ship Date</label>
    <type>Date</type>
</CustomField>