force-app/main/default/objects/qtc_FulfillmentOrderProduct__c/fields/qtc_Software_Media_Set__c.field-meta.xml
<CustomField>
    <fullName>qtc_Software_Media_Set__c</fullName>
    <description>The type of media (USB, DVD, etc.) the software will be delivered/produced on.</description>
    <label>Software Media Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>