force-app/main/default/objects/qtc_FulfillmentOrderProduct__c/fields/qtc_Software_NOT_Ship_Qty__c.field-meta.xml
<CustomField>
    <fullName>qtc_Software_NOT_Ship_Qty__c</fullName>
    <description>Ordered Quantity - Software Ship Qty = Software NOT Ship Qty</description>
    <label>Software NOT Ship Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>