force-app/main/default/objects/qtc_FulfillmentOrderProduct__c/fields/qtc_Software_Release_Number__c.field-meta.xml
<CustomField>
    <fullName>qtc_Software_Release_Number__c</fullName>
    <description>Indicates which release of the software the customer should receive.</description>
    <label>Software Release Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>