force-app/main/default/objects/qtc_FulfillmentOrderProduct__c/fields/qtc_Software_System_Name__c.field-meta.xml
<CustomField>
    <fullName>qtc_Software_System_Name__c</fullName>
    <description>Indicates on the name/label of the type of system (HW) the software will be run on.</description>
    <label>Software System Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>