force-app/main/default/objects/qtc_FulfillmentOrderProduct__c/fields/qtc_SW_Key_End_Date__c.field-meta.xml
<CustomField>
    <fullName>qtc_SW_Key_End_Date__c</fullName>
    <description>SW Key End Date</description>
    <label>SW Key End Date</label>
    <type>Date</type>
</CustomField>