force-app/main/default/objects/qtc_FulfillmentOrderProduct__c/fields/qtc_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>qtc_Tracking_Number__c</fullName>
    <description>ERP Tracking Number</description>
    <label>Tracking Number</label>
    <type>TextArea</type>
</CustomField>