force-app/main/default/objects/qtc_FulfillmentOrderProduct__c/fields/qtc_Unit_List_Price__c.field-meta.xml
<CustomField>
    <fullName>qtc_Unit_List_Price__c</fullName>
    <label>Unit List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>